Fix sider height not 0 when collapsed issue.

--- a/client/src/containers/VisibleArticleList.css
+++ b/client/src/containers/VisibleArticleList.css
@@ -3,3 +3,7 @@
     margin: 0 1.5em;
     border-radius: 5px;
 }
+
+.pager {
+    margin: 0.4em 0.4em ;
+}
